// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Steps demos > demo: Basic 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">✓</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress<span class="ant-steps-item-subtitle">Left 00:00:08</span></div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Error 1`] = `
"<div class="ant-steps ant-steps-horizontal" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">✓</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-error ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">✕</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Small 1`] = `
"<div class="ant-steps ant-steps-horizontal ant-steps-small" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">✓</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>"
`;

exports[`Steps demos > demo: Vertical 1`] = `
"<div class="ant-steps ant-steps-vertical" role="navigation" aria-label="Steps">
  <div class="ant-steps-item ant-steps-item-finish ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">✓</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Finished
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-process ant-steps-item-clickable" role="button" tabindex="0" aria-current="step">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">2</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">In Progress
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
  <div class="ant-steps-item ant-steps-item-wait ant-steps-item-clickable" role="button" tabindex="0">
    <div class="ant-steps-item-container">
      <div class="ant-steps-item-tail"></div>
      <div class="ant-steps-item-icon"><span class="ant-steps-icon">3</span></div>
      <div class="ant-steps-item-content">
        <div class="ant-steps-item-title">Waiting
          <!--v-if-->
        </div>
        <div class="ant-steps-item-description">This is a description.</div>
      </div>
    </div>
  </div>
</div>"
`;
